<resources>
    <string name="app_name">uLesson</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="home_page_header">Hello Simbi</string>
    <string name="subject_icon">Subject Icon</string>
    <string name="recently_watched_header">Recently watched topics</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="play_button">Play button</string>
    <string name="view_all">View All</string>
    <string name="lesson_image">Lesson Image</string>
    <string name="back_button">Back Button</string>
    <string name="network_error_message">Oops! It seems Simbi doesn\'t have internet connected, check your connection and click the RETRY button.</string>
    <string name="generic_error_message">Oops! Seems something broke on our end while trying to process your request, Please click the RETRY button.</string>
    <string name="error_image">Error Image</string>
    <string name="loading_please_wait">Loading, Please wait…</string>
    <string name="retry">Retry</string>
</resources>