<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/home_background"
    tools:context=".view.fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/itim_regular"
            android:text="@string/home_page_header"
            android:textColor="@color/colorText"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/subjectList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"
            app:spanCount="2"
            tools:itemCount="5"
            tools:listitem="@layout/subject_grid_item" />

        <TextView
            android:id="@+id/recentlyViewedHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/itim_regular"
            android:text="@string/recently_watched_header"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/header"
            app:layout_constraintTop_toBottomOf="@+id/subjectList" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recentlyViewedList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="20dp"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recentlyViewedHeader"
            tools:itemCount="2"
            tools:listitem="@layout/recently_viewed_list_item" />

        <Button
            android:id="@+id/viewMoreBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/recent_button"
            android:text="@string/view_all"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/mulish_bold"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recentlyViewedList" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/recentlyViewedGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="recentlyViewedHeader,recentlyViewedList" />


        <ImageView
            android:id="@+id/errorImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/error_image"
            app:layout_constraintBottom_toTopOf="@+id/errorMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:src="@drawable/oops" />

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@+id/retryBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorImage"
            tools:text="@string/generic_error_message" />

        <Button
            android:id="@+id/retryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="@drawable/recent_button"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/retry"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorMessage" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/errorGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:constraint_referenced_ids="retryBtn,errorImage,errorMessage" />

        <include
            layout="@layout/content_loading"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>